objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Tier_Group__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Tier Group</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expected_Revenue__c</fullName>
        <formula>IF( Probability &gt;= 0.5, (Probability * Total_Forecasted_Amount__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Amount__c</fullName>
        <formula>Amount + Sum_of_Forecast_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_Booth_Weighted__c</fullName>
        <label>Total Non-Booth Weighted</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_Booth__c</fullName>
        <label>Total Non-Booth</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Exhibitor_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP Exhibitor Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>a2z_Company_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a company in a2z has been created via Integration</description>
        <label>a2z Company Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>a2z_Contact_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a contact has been created in a2z via integration</description>
        <label>a2z Contact Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ee_misc_questions__c</fullName>
        <label>Misc. Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_ee_Campaign_Short_Desc__c</fullName>
        <label>Pardot Campaign Short Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_CompanyDescription__c</fullName>
        <label>Pardot Company Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_CriticalSucessFactor__c</fullName>
        <label>Pardot objective for exhibiting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_Exhibit_at_other_show__c</fullName>
        <label>Do you exhibit at other show?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_FormName__c</fullName>
        <label>Pardot Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_InquiryReason__c</fullName>
        <label>Reason for your inquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_Interested_Shows__c</fullName>
        <label>Interested Shows</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_Interested_SubExpos__c</fullName>
        <label>Interested Sub Expos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artisan Resource</fullName>
                </value>
                <value>
                    <fullName>Distinctive Living</fullName>
                </value>
                <value>
                    <fullName>HANDMADE: Handmade® Designer Maker</fullName>
                </value>
                <value>
                    <fullName>HANDMADE: Handmade® Global Design</fullName>
                </value>
                <value>
                    <fullName>HOME: Accent on Design®</fullName>
                </value>
                <value>
                    <fullName>HOME: Home Furnishings + Textiles</fullName>
                </value>
                <value>
                    <fullName>HOME: Tabletop + Gourmet Housewares</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE: Baby + Child</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE: Gift</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE: Personal Accessories</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE: Personal Care + Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_PrimaryProduct__c</fullName>
        <label>Pardot Primary Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_ProductCategories_1__c</fullName>
        <label>Pardot Product Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_ProductCategories__c</fullName>
        <label>Product Categories</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_ee_ShowLandingPage__c</fullName>
        <label>Pardot Show Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_ShowWebsite__c</fullName>
        <label>Pardot Show Website</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_TradeshowRole__c</fullName>
        <label>Tradeshow Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_budget_decision_timing__c</fullName>
        <label>Budget Decision Timing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_ee_custom_question1__c</fullName>
        <label>Pardot Custom Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_custom_question2__c</fullName>
        <label>Pardot Custom Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_custom_question3__c</fullName>
        <label>Pardot Custom Question 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>_blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_grade__c</fullName>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_score__c</fullName>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi_ee_trade_shows_I_exhibit_at__c</fullName>
        <label>Pardot Trade Shows I exhibit at</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>ASD_A18_Open_Opportunities_by_AE</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Campaign_Short_Description__c</columns>
        <columns>Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>SubExpo__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Sold,Lost</value>
        </filters>
        <filters>
            <field>Event_Name__c</field>
            <operation>equals</operation>
            <value>2020 ASD Market Week August</value>
        </filters>
        <label>8 - ASD A20 Open - by AE</label>
        <sharedTo>
            <group>ASD</group>
            <role>ASD_Account_Executives</role>
            <role>ASD_Marketing_Coordinators</role>
            <role>ASD_Marketing_Management</role>
            <role>ASD_Sales_Management</role>
            <role>ASD_Show_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASD_A18_Pardot_Opportunities_ALL</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Campaign_Short_Description__c</columns>
        <columns>Score__c</columns>
        <columns>SubExpo__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Sold,Lost</value>
        </filters>
        <filters>
            <field>Event_Name__c</field>
            <operation>equals</operation>
            <value>2020 ASD Market Week August</value>
        </filters>
        <filters>
            <field>Campaign_Short_Description__c</field>
            <operation>startsWith</operation>
            <value>P-</value>
        </filters>
        <label>1 - ASD A20 Pardot Open- By AE</label>
        <sharedTo>
            <group>ASD</group>
            <roleAndSubordinates>ASD_Account_Executives</roleAndSubordinates>
            <roleAndSubordinates>ASD_Marketing_Coordinators</roleAndSubordinates>
            <roleAndSubordinates>ASD_Marketing_Management</roleAndSubordinates>
            <roleAndSubordinates>ASD_Sales_Management</roleAndSubordinates>
            <roleAndSubordinates>ASD_Show_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASD_A18_Sold_Opportunities_ALL</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Campaign_Short_Description__c</columns>
        <columns>Score__c</columns>
        <columns>SubExpo__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Sold</value>
        </filters>
        <filters>
            <field>Event_Name__c</field>
            <operation>equals</operation>
            <value>2020 ASD Market Week August</value>
        </filters>
        <label>6 - ASD A20 Sold - By AE</label>
        <sharedTo>
            <group>ASD</group>
            <roleAndSubordinates>ASD_Account_Executives</roleAndSubordinates>
            <roleAndSubordinates>ASD_Marketing_Coordinators</roleAndSubordinates>
            <roleAndSubordinates>ASD_Marketing_Management</roleAndSubordinates>
            <roleAndSubordinates>ASD_Sales_Management</roleAndSubordinates>
            <roleAndSubordinates>ASD_Show_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASD_My_Expiring_Forecasts</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Campaign_Short_Description__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>A2Z_CoID__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Sold,Lost,Cancelled,No Contact Attempted</value>
        </filters>
        <filters>
            <field>Show__c</field>
            <operation>equals</operation>
            <value>ASD</value>
        </filters>
        <label>ASD -  My Expiring Forecasts</label>
        <sharedTo>
            <role>ASD_Account_Executives</role>
            <role>ASD_Marketing_Coordinators</role>
            <role>ASD_Marketing_Management</role>
            <role>ASD_Sales_Management</role>
            <role>ASD_Show_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_JA_2020_Spring</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>SubExpo__c</columns>
        <columns>Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <columns>Campaign_Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 JA New York Spring</value>
        </filters>
        <label>All Opportunities JA 2020 Spring</label>
        <sharedTo>
            <role>Couture_Show_Management</role>
            <role>JA_Account_Executives</role>
            <role>JA_Marketing_Coordinators</role>
            <role>JA_Marketing_Management</role>
            <role>JA_Sales_Management</role>
            <role>JA_Show_Management</role>
            <roleAndSubordinates>JA_Account_Executives</roleAndSubordinates>
            <roleAndSubordinates>JA_Marketing_Coordinators</roleAndSubordinates>
            <roleAndSubordinates>JA_Marketing_Management</roleAndSubordinates>
            <roleAndSubordinates>JA_Sales_Management</roleAndSubordinates>
            <roleAndSubordinates>JA_Show_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Attendee_Opportunities1</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EE_Record_Type__c</field>
            <operation>equals</operation>
            <value>Attendee</value>
        </filters>
        <label>Attendee Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_Opportunities_JA_2020_Summer</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>SubExpo__c</columns>
        <columns>Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <columns>Campaign_Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 JA New York Summer</value>
        </filters>
        <label>All Opportunities JA 2020 Summer</label>
        <sharedTo>
            <role>JA_Sales_Management</role>
            <role>JA_Show_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Home_Collection_Pardot</fullName>
        <booleanFilter>(1 or 3 )and 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>SubExpo__c</columns>
        <columns>Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <columns>Campaign_Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Interested/Oppty Seriously Discussed,High Interest/Specific Details Reviewed</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2019 JA New York Fall</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Verbal Commitment/Contract Sent/Pending</value>
        </filters>
        <label>My Open Forecasts JA 2019 Fall</label>
        <sharedTo>
            <role>JA_Account_Executives</role>
            <role>JA_Marketing_Coordinators</role>
            <role>JA_Marketing_Management</role>
            <role>JA_Sales_Management</role>
            <role>JA_Show_Management</role>
            <roleAndSubordinates>JA_Account_Executives</roleAndSubordinates>
            <roleAndSubordinates>JA_Marketing_Coordinators</roleAndSubordinates>
            <roleAndSubordinates>JA_Marketing_Management</roleAndSubordinates>
            <roleAndSubordinates>JA_Sales_Management</roleAndSubordinates>
            <roleAndSubordinates>JA_Show_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Forecasts_JA_2020_Spring</fullName>
        <booleanFilter>(1 or 3 )and 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>SubExpo__c</columns>
        <columns>Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <columns>Campaign_Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Interested/Oppty Seriously Discussed,High Interest/Specific Details Reviewed</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 JA New York Spring</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Verbal Commitment/Contract Sent/Pending</value>
        </filters>
        <label>Open Forecasts JA 2020 Spring</label>
        <sharedTo>
            <role>Couture_Show_Management</role>
            <role>JA_Account_Executives</role>
            <role>JA_Marketing_Coordinators</role>
            <role>JA_Marketing_Management</role>
            <role>JA_Sales_Management</role>
            <role>JA_Show_Management</role>
            <roleAndSubordinates>JA_Account_Executives</roleAndSubordinates>
            <roleAndSubordinates>JA_Marketing_Coordinators</roleAndSubordinates>
            <roleAndSubordinates>JA_Marketing_Management</roleAndSubordinates>
            <roleAndSubordinates>JA_Sales_Management</roleAndSubordinates>
            <roleAndSubordinates>JA_Show_Management</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Needs_AR_Approval</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>A2Z_CoID__c</columns>
        <columns>Event__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Approved_For_A2Z__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>A2Z_CoID__c</field>
            <operation>equals</operation>
            <value>NONE</value>
        </filters>
        <filters>
            <field>Approved_For_A2Z__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Verbal Commitment/Contract Sent/Pending,Sold</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Needs AR Approval</label>
        <sharedTo>
            <role>AR_Manager</role>
            <role>AR_Staff</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Forecasts_JA_2020_Summer</fullName>
        <booleanFilter>(1 or 3 )and 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>SubExpo__c</columns>
        <columns>Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <columns>Campaign_Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Interested/Oppty Seriously Discussed,High Interest/Specific Details Reviewed</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 JA New York Summer</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Verbal Commitment/Contract Sent/Pending</value>
        </filters>
        <label>Open Forecasts JA 2020 Summer</label>
        <sharedTo>
            <role>JA_Sales_Management</role>
            <role>JA_Show_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_ASD_M20_Renewals_by_AE</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Campaign_Short_Description__c</columns>
        <columns>Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>SubExpo__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Forecast_NSF__c</columns>
        <columns>Forecast_Revenue__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Sold,Lost</value>
        </filters>
        <filters>
            <field>Event_Name__c</field>
            <operation>equals</operation>
            <value>2020 ASD Market Week August</value>
        </filters>
        <filters>
            <field>Campaign_Short_Description__c</field>
            <operation>contains</operation>
            <value>Renew</value>
        </filters>
        <label>2 - ASD A20 Renewals- by AE</label>
        <sharedTo>
            <group>ASD</group>
            <role>ASD_Account_Executives</role>
            <role>ASD_Marketing_Coordinators</role>
            <role>ASD_Marketing_Management</role>
            <role>ASD_Sales_Management</role>
            <role>ASD_Show_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2019_BDNY_Pipeline</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.EXP_AMOUNT</columns>
        <columns>NSF_Weighted__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Score__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Campaign_Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Sold,Lost,Cancelled</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2019 Boutique Design New York</value>
        </filters>
        <label>2019 BDNY Pipeline</label>
        <sharedTo>
            <role>Couture_Show_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2019_CSC</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.EXP_AMOUNT</columns>
        <columns>NSF_Weighted__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Score__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Campaign_Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Sold,Lost,Cancelled</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2019 Construction Super Conference</value>
        </filters>
        <label>2019 CSC</label>
        <sharedTo>
            <role>Couture_Show_Management</role>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>A2Z_Required_Field</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
Probability &gt;= 0.90, 
OR ( ISBLANK(Account.A2Z_CoID__c),
      ISNULL(Account.A2Z_CoID__c) 
   ),

OR (
     ISBLANK(Account.FirstName__c ),
     ISBLANK(Account.LastName__c ),   
     ISBLANK(Account.Email_Main__c ), 
     ISBLANK(Account.BillingStreet), 
     ISBLANK(Account.BillingCity), 
     ISBLANK(Account.BillingCountry), 
     ISBLANK(Account.Phone),
     AND( 
         OR(
          ISPICKVAL(Account.BillingCountryCode,'US'), 
          ISPICKVAL(Account.BillingCountryCode,'CA') 
          ),

        OR( 
           ISBLANK(Account.BillingState), 
           ISBLANK(Account.BillingPostalCode)
          )
        )
     )
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False 
&amp;&amp;  EE_Record_Type__c == "Exhibitor"</errorConditionFormula>
        <errorMessage>The Account for this Opportunity does not have complete information. In order to set the Opportunity to 90% or greater, you must first complete the following fields: [A2Z Contact First &amp; Last Name,A2Z Company E-Mail, HQ Address,Phone] on the Account tab.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISBLANK(Amount),
Probability &gt;= 0.5 ,
NOT(ISPICKVAL(Product__c,'TR Package'))
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Please enter Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_NOT_Allowed_For_TR</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ABS(Amount) &gt; 0.00,
ISPICKVAL(Product__c,'TR Package')
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>For TR Package, please forecast each product individually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Booth_Expired</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(StageName,"Active"),
     ISPICKVAL( Product__c, "Booth"),
     Event_Booth_Last_Date__c &lt; Today())&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Event__c</errorDisplayField>
        <errorMessage>You cannot create a Booth Opportunity for the  [Event] because it is past the date for Opportunity creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Forecast_NFS_Required</fullName>
        <active>true</active>
        <description>changed on 1/22 to accommodate Marketing Operations Stage Change initiative</description>
        <errorConditionFormula>AND
(Probability &gt;= 0.5,
(ISPICKVAL( Product__c, "Booth")),
ISBLANK( Forecast_NSF__c )
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Forecast_NSF__c</errorDisplayField>
        <errorMessage>Forecast NSF is required when forecasting booth revenue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Booth_expired</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL(StageName,"Active"),
 NOT(ISPICKVAL( Product__c, "Booth")), 
 Event_Non_Booth_Last_Date__c &lt; Today())&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Event__c</errorDisplayField>
        <errorMessage>You cannot create a Non-Booth Opportunity for the [Event] because it is past the date for Opportunity creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_TR_With_PackageForecast</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Product__c,'TR Package')),
    Not(ISPICKVAL(StageName,'No Contact Attempted')), 
( Sum_of_Forecast_Amount__c  &gt; 0))&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False
&amp;&amp;  EE_Record_Type__c = "Exhibitor"</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Non TR opportunity CANNOT have forecast at package level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Object_code_for_Lost_and_cancelled</fullName>
        <active>true</active>
        <description>updated 4/16
Does not let a user enter an objection code if the stagename is not lost or cancelled</description>
        <errorConditionFormula>AND(
and(
   NOT(ISPICKVAL( StageName,'Lost')),NOT(ISPICKVAL( StageName,'Cancelled'))), NOT(ISBLANK( TEXT(Objection_Code__c ))))
&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Objection_Code__c</errorDisplayField>
        <errorMessage>You cannot enter an OBJECTION CODE  if the Stage is NOT Lost or Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ObjectionCodeonlyforLostandCancelled</fullName>
        <active>true</active>
        <description>Set Objection code only when Opportunity Stage is Lost updated 4/16 OR cancelled</description>
        <errorConditionFormula>AND(
OR(
  ISPICKVAL(StageName,'Lost'),ISPICKVAL(StageName,'Cancelled')),(ISBLANK(Text( Objection_Code__c ))))&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Objection_Code__c</errorDisplayField>
        <errorMessage>An Objection Code is required when the Opportunity is set to Lost or Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_for_NSF</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL( Product__c ,"Booth"))  &amp;&amp; NOT(ISBLANK(  Forecast_NSF__c  ))&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Forecast_NSF__c</errorDisplayField>
        <errorMessage>NSF cannot be entered for Non-Booth opportunities. Please check Product Category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Opportunity_Event</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
    Related_Opportunity__r.Event__c &lt;&gt; NULL, 
    Event__r.Name &lt;&gt; Related_Opportunity__r.Event__r.Name  
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Related_Opportunity__c</errorDisplayField>
        <errorMessage>You can only relate to an opportunity of the same Event</errorMessage>
    </validationRules>
</CustomObject>